# Parallelizing-Graph-Algorithms

./: .gitignore  CMakeLists.txt  OpenMPRuntime.txt  a.out  abstractGraph.hpp  cmake_install.cmake  graph.hpp  graphCOO.hpp  graphCSR.hpp  graphCompressed.hpp  graphCoordinate.hpp  graphDense.hpp  main.cpp  runtime.txt  test.mtx
MMIO/: CMakeLists.txt  example  example_read.cpp  mmio.cpp  mmio.h  mmio_cpp.h
cmake/: CompilerWarnings.cmake
include/: abstractGraph.hpp  ellpack.hpp  graphCOO.hpp  graphCSR.hpp  graphDense.hpp  timer.h  transposeEllpack.hpp  util.h
lib/CLI11/: CMakeLists.txt
lib/MMIO/: Makefile  cmake_install.cmake  mmio.cpp  mmio.h  mmio_cpp.h
perf_compare/: CMakeLists.txt  perf_compare.cpp
results/: naive.csv  openmp.csv  openmp_217.csv  plot.py  row.csv  row_217.csv  transpose.csv  transpose_217.csv
runtimes/: CONST_VCL16_ROW.csv  CONST_VCL16_TRANSPOSE.csv  ELLPACK.csv  NAIVE.csv  OPENMP.csv  OPENMPparams.csv  OpenMP.csv  TRANSPOSED_ELLPACK.csv  VCL_16_ROW.csv  VCL_16_TRANSPOSE.csv  VectorClassRow16Elements.csv  VectorClassTranspose16Elements.csv  all.csv  compare.csv  compare_haar  compare_hajos  compare_hajos_2  matrices.csv  matricesWithELPACK.csv  multiple_acc.csv  openmp.csv  runtime.txt  sve+arm.csv  sve.csv
scripts/: compare.sh  compare_2.sh  download.py  download.sh  download2.sh  matrices  matrices_links  measure.sh  plot.py  vtune.sh
src/: main.cpp
test/: CMakeLists.txt  generate_matrix.cpp  perf_compare.cpp  tests.cpp
